log

Thu 14 Mar 2024 08:36:02 PM UTC: 
 exercises.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
943f885
Thu 14 Mar 2024 08:36:47 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d1e4b2b
Thu 14 Mar 2024 08:44:45 PM UTC: 
 exercises.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:60:20: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |           nuevaArr = arr[i];
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
7ce7ce8
Thu 14 Mar 2024 08:45:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
7d12ca0
Thu 14 Mar 2024 08:46:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
8db53ed
Thu 14 Mar 2024 08:47:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
0189060
